# ccac

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README.zh.md  ccac.h  ccac1.h  unicode.h
bench/: bench_ccac.c  bench_codec.c
docs/: ac-diagrams.md
scripts/: gen_stress_text.py  gen_words.py
tests/: test_ccac.c  test_ccac_robust.c  test_ccac_stress.c  test_unicode.c
